--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
     "dependencies": {
         "@project-serum/anchor": "^0.19.0",
         "@solana/spl-token": "^0.1.8",
-        "@solana/web3.js": "^1.33.0"
+        "@solana/web3.js": "^1.33.0",
+        "keccak256": "^1.0.6",
+        "merkletreejs": "^0.2.30"
     },
     "devDependencies": {
         "@types/mocha": "^9.0.0",
