--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
         "@project-serum/anchor": "^0.19.0",
         "@solana/spl-token": "^0.1.8",
         "@solana/web3.js": "^1.33.0",
+        "chai-as-promised": "^7.1.1",
         "keccak256": "^1.0.6",
         "merkletreejs": "^0.2.30"
     },
