--- a/programs/nft-reserve/Cargo.toml
+++ b/programs/nft-reserve/Cargo.toml
@@ -16,6 +16,8 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "0.22.1"
+anchor-lang = { version="0.22.1", features = ["init-if-needed"] }
 anchor-spl = "0.22.1"
 solana-program = "1.9.5"
+bitflags = "1.3.2"
+solana-safe-math = "0.1.0"
