--- a/programs/nft-reserve/Cargo.toml
+++ b/programs/nft-reserve/Cargo.toml
@@ -21,3 +21,4 @@ anchor-spl = "0.22.1"
 solana-program = "1.9.5"
 bitflags = "1.3.2"
 solana-safe-math = "0.1.0"
+metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
