--- a/app/nft-reserve/package.json
+++ b/app/nft-reserve/package.json
@@ -11,13 +11,15 @@
     "update:anchor": "yarn upgrade @project-serum/anchor --latest --check-files"
   },
   "dependencies": {
+    "@dafcoe/vue-collapsible-panel": "^0.2.0",
     "@gemworks/gem-farm-ts": "^0.22.8",
-    "@metaplex/js": "^4.9.0",
+    "@metaplex/js": "^4.12.0",
     "@project-serum/anchor": "0.22.0",
     "@solana/spl-token": "^0.1.8",
     "@solana/wallet-adapter-base": "^0.7.1",
     "@solana/wallet-adapter-wallets": "^0.11.3",
     "@solana/web3.js": "^1.31.0",
+    "@vueuse/motion": "^2.0.0-beta.12",
     "autoprefixer": "^9.8.8",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
@@ -25,6 +27,7 @@
     "numeral": "^2.0.6",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "tw-elements": "^1.0.0-alpha11",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
